# internal/handler/response/auth.go
@@ -1,0 +1,6 @@
+package response
+
+type AuthResponse struct {
+	AccessToken  string `json:"access_token,omitempty"`
+	RefreshToken string `json:"refresh_token,omitempty"`
+}
