# internal/handler/response/base.go
@@ -1,0 +1,7 @@
+package response
+
+type BaseResponse struct {
+	Message string      `json:"message,omitempty"`
+	Data    interface{} `json:"data,omitempty"`
+	Error   string      `json:"error,omitempty"`
+}
